--- a/.github/workflows/master_chapman-experiments-mass-email.yml
+++ b/.github/workflows/master_chapman-experiments-mass-email.yml
@@ -32,7 +32,7 @@ jobs:
         DBUSER: postgres
         LOG_LOCATION: abc
         EMAIL_MS_HOST: abc
-        EMAIL_MS_USER_NAME: abc
+        EMAIL_HOST_USER: abc
         EMAIL_MS_PASSWORD: abc
         EMAIL_TEST_ACCOUNT: abc
         SECRET_KEY: super_duper_secret_key
