--- a/.github/workflows/master_chapman-experiments-mass-email.yml
+++ b/.github/workflows/master_chapman-experiments-mass-email.yml
@@ -33,7 +33,7 @@ jobs:
         LOG_LOCATION: abc
         EMAIL_MS_HOST: abc
         EMAIL_HOST_USER: abc
-        EMAIL_MS_PASSWORD: abc
+        EMAIL_HOST_PASSWORD: abc
         EMAIL_TEST_ACCOUNT: abc
         SECRET_KEY: super_duper_secret_key
       uses: azure/appservice-build@v2
