--- a/.github/workflows/dev_chapman-experiments-mass-email(dev).yml
+++ b/.github/workflows/dev_chapman-experiments-mass-email(dev).yml
@@ -31,6 +31,9 @@ jobs:
       run: pip install -r requirements.txt
 
     - name: Run tests
+      uses: harmon758/postgresql-action@v1
+      with:
+        postgresql version: '12.5'
       env:
         ALLOWED_HOSTS: localhost 127.0.0.1
         DBHOST: localhost
