--- a/.github/workflows/dev_chapman-experiments-mass-email(dev).yml
+++ b/.github/workflows/dev_chapman-experiments-mass-email(dev).yml
@@ -30,10 +30,12 @@ jobs:
     - name: Install dependencies
       run: pip install -r requirements.txt
 
+    - name: PostgreSQL
+        uses: harmon758/postgresql-action@v1
+        with:
+          postgresql version: '12.5'
+
     - name: Run tests
-      uses: harmon758/postgresql-action@v1
-      with:
-        postgresql version: '12.5'
       env:
         ALLOWED_HOSTS: localhost 127.0.0.1
         DBHOST: localhost
