--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,8 @@ isort==5.8.0
 lazy-object-proxy==1.6.0
 Markdown==3.3.4
 mccabe==0.6.1
-#psycopg2-binary
-psycopg2==2.8.6
+psycopg2-binary
+#psycopg2==2.8.6
 #pylint==2.7.4
 pytz==2021.1
 sqlparse==0.4.1
