--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ daphne==3.0.*
 Django==3.2.*
 django-filter==2.4.0
 djangorestframework==3.12.*
-gunicorn==20.1.0
+#gunicorn==20.1.0
 isort==5.8.0
 lazy-object-proxy==1.6.0
 Markdown==3.3.4
