--- a/.github/workflows/dev_chapman-experiments-mass-email(dev).yml
+++ b/.github/workflows/dev_chapman-experiments-mass-email(dev).yml
@@ -70,7 +70,7 @@ jobs:
     needs: build
     environment:
       name: 'dev'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+      #url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
       - name: Download artifact from build job
