--- a/.github/workflows/master_chapman-experiments-mass-email.yml
+++ b/.github/workflows/master_chapman-experiments-mass-email.yml
@@ -1,6 +1,5 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
+# Docs for the Azure Web Apps Deploy action: https://go.microsoft.com/fwlink/?linkid=2134798
+# More GitHub Actions for Azure: https://go.microsoft.com/fwlink/?linkid=2135048
 
 name: Azure App Service - chapman-experiments-mass-email(Production), Build and deploy Python app
 
@@ -8,56 +7,45 @@ on:
   push:
     branches:
       - master
-  workflow_dispatch:
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    # checkout the repo
+    - name: 'Checkout Github Action'
+      uses: actions/checkout@master
 
     - name: Set up Python version
       uses: actions/setup-python@v1
       with:
         python-version: '3.9'
 
-    - name: Create and start virtual environment
-      run: |
-        python -m venv venv
-        source venv/bin/activate
-
-    - name: Install dependencies
-      run: pip install -r requirements.txt
-
-    # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
-
-    - name: Upload artifact for deployment jobs
-      uses: actions/upload-artifact@v2
+    - name: Build using AppService-Build
+      env:
+        ALLOWED_HOSTS: localhost 127.0.0.1
+        DBHOST: localhost
+        DBNAME: github_actions
+        DBPASS: postgres
+        DBUSER: postgres
+        LOG_LOCATION: abc
+        EMAIL_MS_HOST: abc
+        EMAIL_HOST_USER: abc
+        EMAIL_HOST_PASSWORD: abc
+        EMAIL_TEST_ACCOUNT: abc
+        SECRET_KEY: super_duper_secret_key
+        SENDGRID_API_KEY: abc
+        CSRF_TRUSTED_ORIGINS: http://localhost
+      uses: azure/appservice-build@v2
       with:
-        name: python-app
-        path: |
-          .
-          !venv/
+        platform: python
+        platform-version: '3.9'
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'production'
-      #url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v2
-        with:
-          name: python-app
-          path: .
-
-      - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: 'chapman-experiments-mass-email'
-          slot-name: 'production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_601D252E979D4763805859BEF6348193 }}
+    - name: Run Azure webapp deploy action using publish profile credentials
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: chapman-experiments-mass-email
+        slot-name: Production
+        publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_601D252E979D4763805859BEF6348193 }}
 
