--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,9 @@ Django==4.0.*
 djangorestframework==3.13.*
 gunicorn==20.1.0
 psycopg2-binary==2.9.3
+python-http-client==3.3.7
 pytz==2022.1
+sendgrid==6.9.*
 sqlparse==0.4.2
-whitenoise==6.2.0
+starkbank-ecdsa==2.0.3
+whitenoise==6.2.*
