--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-asgiref==3.5.2
-Django==4.0.*
-djangorestframework==3.13.*
+asgiref==3.6.*
+Django==4.2.*
+djangorestframework==3.14.0
 gunicorn==20.1.0
-psycopg2-binary==2.9.3
+psycopg==3.1.9
 python-http-client==3.3.7
-pytz==2022.1
-sendgrid==6.9.*
-sqlparse==0.4.2
-starkbank-ecdsa==2.0.3
-whitenoise==6.2.*
+pytz==2022.2.1
+sendgrid==6.10.*
+sqlparse==0.4.4
+starkbank-ecdsa==2.2.0
+whitenoise==6.5.0
