--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-asgiref==3.6.*
+asgiref==3.8.1
 Django==4.2.*
-djangorestframework==3.14.0
-gunicorn==20.1.0
+djangorestframework==3.15.1
+gunicorn==22.0.0
 psycopg==3.1.9
 python-http-client==3.3.7
 pytz==2022.2.1
 sendgrid==6.10.*
-sqlparse==0.4.4
+sqlparse==0.5.0
 starkbank-ecdsa==2.2.0
-whitenoise==6.5.0
+whitenoise==6.6.0
